Archive2/9a/357f073fc9f96d/output
main.cpp: In function 'main':
main.cpp:5:5: error: implicit declaration of function 'static_assert' [-Wimplicit-function-declaration]
     static_assert(2 + 2 == 4, "Whoa dude!"); // or _Static_assert(...
     ^
